--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet"  href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
     <script src="script.js"></script>
 </head>
 <body>
     <header>
-        <section>
             <nav>   
                 <h1 id="logo">Club Monaco</h1>
                 <ul>
@@ -20,7 +19,6 @@
                     <li><a href="#">Sale</a></li>
                 </ul>
             </nav>
-        </section>
     </header>
     <div class="bar">
         <button id="filters" onclick="toggleMenu()"> 
@@ -35,11 +33,11 @@
             Type
             <hr>
             <input type="checkbox" id="c1">
-            <label for="c1">blah</label><br>
+            <label for="c1">short</label><br>
             <input type="checkbox"id="c2" >
-            <label for="c2">blah</label><br>
+            <label for="c2">maxi</label><br>
             <input type="checkbox"id="c3">
-            <label for="c3">blah</label><br>
+            <label for="c3">jumpsuit</label><br>
         </div>
 
     <div class="pictures">
