--- a/index.html
+++ b/index.html
@@ -41,13 +41,8 @@
         </div>
 
     <div class="pictures">
-        
-        <img src="https://i.pinimg.com/564x/fe/ca/c0/fecac007779f56c19a9892dedefa2ba0.jpg" alt="dress">
-        <img src="https://i.pinimg.com/564x/fe/ca/c0/fecac007779f56c19a9892dedefa2ba0.jpg" alt="dress">
-        <img src="https://i.pinimg.com/564x/fe/ca/c0/fecac007779f56c19a9892dedefa2ba0.jpg" alt="dress">
-        <img src="https://i.pinimg.com/564x/fe/ca/c0/fecac007779f56c19a9892dedefa2ba0.jpg" alt="dress">
-        <img src="https://i.pinimg.com/564x/fe/ca/c0/fecac007779f56c19a9892dedefa2ba0.jpg" alt="dress">    
-    </div>
+       <!-- pictures genereted here-->
+        </div>
 
   </div>
 
